--- a/dev/demo-app/webapp/ClientApp/css/site.css
+++ b/dev/demo-app/webapp/ClientApp/css/site.css
@@ -1,9 +1,10 @@
 body {
-	background: url(/images/page_bg.png);
-	overflow: hidden;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	height: 100%;
-	padding: 0; margin: 0;
+    background-color: #f6f6f6;
+    overflow: hidden;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    height: 100%;
+    padding: 0;
+    margin: 0;
     color: #333;
 }
 
@@ -29,7 +30,6 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
-
 }
 
     .insightTwo button {
@@ -41,14 +41,17 @@ body {
     }
 
 
-    .insightOne {
-        transform: translateY(1px);
-        transition: transform ease-in-out 1s;
-    }
+.insightOne {
+    transform: translateY(1px);
+    transition: transform ease-in-out 1s;
+    color: #54CA95;
+    margin: 40px;
+}
 
 .showInvite .insightTwo {
     transform: translateY(-200px);
 }
+
 .showInvite .insightOne {
     transform: translateY(300px);
 }
@@ -63,95 +66,104 @@ body {
 }
 
 #login {
-	text-align: center;
-	color: #333;
-	padding-top: 60px;
+    text-align: center;
+    color: #333;
+    padding-top: 60px;
 }
+
 #logout {
-	position: absolute;
-	top: 5px; right: 15px;
-	font-size: 75%;
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    font-size: 75%;
 }
-	#login a,
-	#logout a { font-weight: bold; color: #05b; }
+
+    #login a,
+    #logout a {
+        font-weight: bold;
+        color: #05b;
+    }
 
 #header {
-	position: fixed;
-	z-index: 10000;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 250px;
-	display: flex;
-	flex-direction: column;
-	background-color: rgba(255, 255, 255, .8);
-	-webkit-backdrop-filter: blur(15px);
-	box-shadow: 0px 1px 2px rgba(34, 25, 25, 0.4);
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, .8);
+    -webkit-backdrop-filter: blur(16px);
+    box-shadow: 0 1px 8px rgba(34, 25, 25, 0.2);
 }
 
 #wrapper {
-	position: absolute;
-	z-index: 9000;
-	height: 100%;
-	top: 0; left: 0;
-	overflow-y: scroll;
+    position: absolute;
+    z-index: 9000;
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow-y: scroll;
 }
 
 
 /* INSIGHTS */
 
 #head {
-	width: 100%;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 150%;
-	padding: 5px 15px;
+    width: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 150%;
+    padding: 5px 15px;
 }
 
 #insights {
-	display: flex;
-	flex-direction: row;
-	align-content: space-between;
-	padding: 15px;
-	/* height: 100%; */
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+    padding: 15px;
+    /* height: 100%; */
 }
+
 .rate {
-margin-left: 5%;
+    margin-left: 5%;
 }
 
 .insight {
-	display: flex;
-	align-content: center;
-	justify-content: flex-start;
-	height: 100%;
-	flex-grow: 1;
-	font-size: 100%;
-	line-height: 80%;
-	flex-direction: column;
+    flex: 1;
+    display: flex;
+    align-content: center;
+    justify-content: flex-start;
+    height: 100%;
+    flex-grow: 1;
+    font-size: 100%;
+    line-height: 80%;
+    flex-direction: column;
     overflow: hidden;
 }
 
-.insight p {
-	font-size: 20%;
-	line-height: 20%;
-}
+    .insight p {
+        font-size: 20%;
+        line-height: 20%;
+        color: #33414C;
+    }
 
 .insightHeader {
     font-size: 120%;
-    text-align:left;
+    text-align: left;
     margin-left: 20px;
-        }
+    color: #33414C;
+}
 
 .insightRate {
-    font-size: 160px;
-    border: 2px solid #aaa;
+    flex: 1;
+    font-size: 80px;
+    font-weight: bolder;
     height: 75%;
-    margin: 0 60px;
     display: flex;
     text-align: center;
-    background-color: rgba(222, 222, 200, 0.3);
+    background-color: #f6f6f6;
     height: 200px;
-
-
 }
 
 .donut {
@@ -160,17 +172,16 @@ margin-left: 5%;
 }
 
 #schedule {
-	align-content: unset;
-	background-color: rgba(189, 206, 209, 0.8);
-	display: grid;
-	grid-template-columns: 10fr 5fr 75fr 10fr;
-	grid-auto-rows: 30px;
-	font-size: 70%;
-	overflow-y: scroll;
-	overflow-x: hidden;
-	-ms-overflow-style: -ms-autohiding-scrollbar;
-	height: 200px;
-	box-shadow: 0px 1px 2px rgba(34, 25, 25, 0.4)
+    flex: 4;
+    align-content: unset;
+    background-color: #f6f6f6;
+    display: grid;
+    grid-template-columns: 2fr 1fr 7fr 2fr;
+    grid-auto-rows: 30px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    height: 200px;
 }
 
 .halfHour, .goatInsight {
@@ -179,86 +190,78 @@ margin-left: 5%;
 }
 
 .time {
-	place-self: center;
-	padding: auto 0;
-	text-align: center;
-	font-family: 'Segoe UI lite', Tahoma, Geneva, Verdana, sans-serif;
-	color: 1px solid rgba(153, 162, 163, 0.6);
+    margin: auto;
+    text-align: center;
+    color: #88949d;
 }
 
-.taken { cursor: pointer; }
+.taken {
+    cursor: pointer;
+    color: #33414C;
+    font-weight: 600;
+    padding-left: 12px;
+}
 
 .status.taken {
-	background-color: rgb(94, 94, 94);
-	border: 1px solid rgb(154, 154, 154);
-	border-top: 0;
-	border-bottom: 0;
+    background-color: #54CA95;
+    border-top: 0;
+    border-bottom: 0;
 }
 
-.status.taken.meeting {
-	background-color: rgb(94, 94, 255);
-	border-color: rgb(154, 154, 250);
-}
+    .status.taken.meeting {
+        background-color: #F86A7E;
+    }
 
-.status.taken.relax {
-	background-color: rgb(94, 190, 94);
-	border-color: rgb(154, 190, 154);
-}
+    .status.taken.relax {
+        background-color: rgb(94, 190, 94);
+        border-color: rgb(154, 190, 154);
+    }
 
 .halfHour.taken, .goatInsight.taken {
     display: flex;
     align-items: center;
-    background-color: rgba(189, 206, 209, 0.9);
-    border: 1px solid rgba(209, 220, 221, 0.1)
+    background-color: rgba(250, 217, 123, 0.85);
 }
 
 #schedule {
-	width: 40%;
-	border: 1px solid gainsboro;
+    width: 40%;
+    border: 1px solid rgba(153, 162, 163, 0.1);
 }
 
 /* Tiles */
 
 #columns {
-	-webkit-column-count: 3;
-	-webkit-column-gap: 10px;
-	-webkit-column-fill: auto;
-	-moz-column-count: 3;
-	-moz-column-gap: 10px;
-	-moz-column-fill: auto;
-	column-count: 3;
-	column-gap: 15px;
-	column-fill: auto;
-
-	padding: 260px 10px 10px 10px;
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-gap: 24px;
+    -moz-column-gap: 24px;
+    column-gap: 24px;
+    -webkit-column-fill: auto;
+    -moz-column-fill: auto;
+    column-fill: auto;
+    padding: 280px 64px 24px 64px;
 }
 
 .pin {
-	display: inline-block;
-	background: #FEFEFE;
-	border: 2px solid #FAFAFA;
-	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
-	margin: 0 2px 15px;
-	-webkit-column-break-inside: avoid;
-	-moz-column-break-inside: avoid;
-	column-break-inside: avoid;
-	padding: 15px;
-	/* padding-bottom: 5px; */
-	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
-	opacity: 1;
-	-webkit-transition: all .2s ease;
-	-moz-transition: all .2s ease;
-	-o-transition: all .2s ease;
-	transition: all .2s ease;
+    display: inline-block;
+    margin-bottom: 24px;
+    -webkit-column-break-inside: avoid;
+    -moz-column-break-inside: avoid;
+    column-break-inside: avoid;
+    opacity: 1;
+    -webkit-transition: all .2s ease;
+    -moz-transition: all .2s ease;
+    -o-transition: all .2s ease;
+    transition: all .2s ease;
 }
 
-.pin img {
-	width: 100%;
-	cursor: pointer;
-	/* border-bottom: 1px solid #ccc;
-	padding-bottom: 15px;
-	margin-bottom: 5px; */
-}
+    .pin img {
+        width: 100%;
+        cursor: pointer;
+        border-radius: 12px;
+        box-shadow: 0 1px 4px rgba(34, 25, 25, 0.4);
+    }
 
 /* .pin p {
 	font: 12px/18px Arial, sans-serif;
@@ -267,43 +270,43 @@ margin-left: 5%;
 } */
 
 @media (min-width: 960px) {
-	#columns {
-		-webkit-column-count: 4;
-		-moz-column-count: 4;
-		column-count: 4;
-	}
+    #columns {
+        -webkit-column-count: 4;
+        -moz-column-count: 4;
+        column-count: 4;
+    }
 }
 
 @media (min-width: 1100px) {
-	#columns {
-		-webkit-column-count: 5;
-		-moz-column-count: 5;
-		column-count: 5;
-	}
+    #columns {
+        -webkit-column-count: 5;
+        -moz-column-count: 5;
+        column-count: 5;
+    }
 }
 
 #columns:hover .pin:not(:hover) {
-	xopacity: 0.4;
+    xopacity: 0.4;
 }
 
 
 
 /* Lightbox */
 .ReactModalPortal > div {
-	z-index: 11000 !important;
-	top: 250px !important;
+    z-index: 11000 !important;
+    top: 250px !important;
 }
 
 /* Player */
 #player video {
-	position: absolute;
-	top: 0; bottom: 0;
-	width: 100%;
-	height: 100%;
-
-	background-color: black;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
