--- a/dev/demo-app/webapp/ClientApp/css/site.css
+++ b/dev/demo-app/webapp/ClientApp/css/site.css
@@ -90,7 +90,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 250px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     background-color: rgba(255, 255, 255, .8);
@@ -105,6 +105,7 @@ body {
     top: 0;
     left: 0;
     overflow-y: scroll;
+    display: none;
 }
 
 
@@ -126,7 +127,14 @@ body {
 }
 
 .rate {
-    margin-left: 5%;
+    xmargin-left: 5%;
+}
+
+.insightCol {
+    display:flex;
+    flex-direction: column;
+    padding:20px;
+    flex:1;
 }
 
 .insight {
@@ -139,7 +147,7 @@ body {
     font-size: 100%;
     line-height: 80%;
     flex-direction: column;
-    overflow: hidden;
+    xoverflow: hidden;
 }
 
     .insight p {
@@ -150,7 +158,7 @@ body {
 
 .insightHeader {
     font-size: 120%;
-    text-align: left;
+    text-align: center;
     margin-left: 20px;
     color: #33414C;
 }
@@ -164,11 +172,12 @@ body {
     text-align: center;
     background-color: #f6f6f6;
     height: 200px;
+    overflow: hidden;
 }
 
 .donut {
-    height: 150px;
-    width: 150px;
+    height: 400px;
+    width: 100%;
 }
 
 #schedule {
@@ -181,7 +190,7 @@ body {
     overflow-y: scroll;
     overflow-x: hidden;
     -ms-overflow-style: -ms-autohiding-scrollbar;
-    height: 200px;
+    height: 100%;
 }
 
 .halfHour, .goatInsight {
@@ -224,7 +233,7 @@ body {
 }
 
 #schedule {
-    width: 40%;
+    width: 100%;
     border: 1px solid rgba(153, 162, 163, 0.1);
 }
 
